--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-PUBLIC_TURNSTILE_SITE_KEY=your_turnstile_site_key
-TURNSTILE_SECRET_KEY=your_turnstile_secret_key
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+# Example environment file
+# No environment variables are required
