--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.12.9",
     "tailwindcss": "^3.4.7"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.9"
   }
 }
