Refactor development environment display in app.js and update package.json scripts
- Updated the commit info display in development mode to show real-time information instead of simulated data.
- Enhanced fallback content to include current timestamps for build time and last refresh.
- Simplified the serve and dev scripts in package.json by removing unnecessary directory changes.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "echo 'No build step required for static site'",
-    "serve": "cd html && python3 -m http.server 8080",
-    "dev": "cd html && python3 -m http.server 8080"
+    "serve": "python3 -m http.server 8080",
+    "dev": "python3 -m http.server 8080"
   },
   "dependencies": {
     "tailwindcss": "^3.4.7"
