Update commit info loading logic in app.js and modify package.json build scripts
- Changed the path for fetching commit info to the generated JSON file in app.js.
- Enhanced the fallback mechanism to retrieve git info if the primary fetch fails.
- Updated package.json to include a proper build script and ensure build steps are executed before serving the application.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo 'No build step required for static site'",
-    "serve": "python3 -m http.server 8080",
-    "dev": "python3 -m http.server 8080"
+    "build": "node scripts/build-with-git-info.js",
+    "prebuild": "node scripts/build-with-git-info.js",
+    "serve": "npm run build && python3 -m http.server 8080",
+    "dev": "npm run build && python3 -m http.server 8080"
   },
   "dependencies": {
     "tailwindcss": "^3.4.7"
