--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,11 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  BUILD_TIME = ""
 
+# Ensure build script runs and creates commit info
+[build.processing]
+  skip_processing = false
 
 [[redirects]]
   from = "/contact"
@@ -18,3 +22,9 @@
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
+
+# Ensure .well-known directory is accessible
+[[headers]]
+  for = "/.well-known/*"
+  [headers.values]
+    Cache-Control = "no-cache"
